deploy/yamls-parameterized/kustomize/base/sample-class-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: sample-class
    name: sample-class
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: sample-class
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: sample-class
            name: sample-class
        spec:
            containers:
                - image: quay.io/2/sample-class:latest
                  imagePullPolicy: Always
                  name: sample-class
                  ports:
                    - containerPort: 8080
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
